--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 }
 
 .contents {
- width: 65%;
+ width: 55%;
  background-color: rgba(255,255,255,0.8);
  margin: -10px auto 0 auto;
  padding: 5px;
@@ -16,7 +16,7 @@ body {
 
 .topContents {
   width: 650px;
-  height: 200px;
+  height: 150px;
   margin: 10px auto 0px auto;
   overflow: hidden;
 }
@@ -52,18 +52,25 @@ body {
 
 .botContents {
   position: relative;
-  width: 800px;
-  height: 625px;
+  width: 640px;
+  height: 520px;
+  margin: 20px auto 0 auto;
+}
+
+.displayImage {
+  position: relative;
+  width: 640px;
+  height: 520px;
   margin: 20px auto 0 auto;
   overflow: hidden;
 }
 
-.offspringContainer img {
+.displayImage img {
   position: absolute;
   top: 0;
   left: 0;
-  max-width: 800px;
-  max-height: 625px;
+  max-width: 640px;
+  max-height: 500px;
 }
 
 
