--- a/style.css
+++ b/style.css
@@ -88,14 +88,14 @@ body {
 }
 
 #credits {
-    width: 300px;
+    width: 200px;
     padding: 8px;
     position: fixed;
     bottom: 15px;
     cursor: pointer;
     right: 15px;
     background-color: rgba(255, 255, 255, 0.35);
-    color: #6d877f;
+    color: #fff;
     border-radius: 10px;
     font-family: "Open Sans";
     font-size: 10px;
